changed proejct name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pharos-beacon",
+  "name": "bio2rdf-beacon",
   "version": "0.0.1",
   "private": true,
   "description": "New Swagger API Project",
