--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "rdflib": "^0.16.3",
     "swagger-express-mw": "^0.1.0",
     "unirest": "^0.5.1",
-    "virtuoso-sparql-client": "^0.1.5"
+    "sparql-client-2": "^0.6.2"
   },
   "devDependencies": {
     "should": "^7.1.0",
